Add dummy chat data, fix unread badge, message preview limit..., remove srcoll bars from the side bard & chat list

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,13 @@ body
   margin: 0;
   padding: 0;
 }
+
+.hide-scroll::-webkit-scrollbar
+{
+  display:none ;
+}
+
+.hide-scroll{
+  -ms-overflow-style: none; 
+  scrollbar-width: none;  
+}
